--- a/2D-triangle/index.html
+++ b/2D-triangle/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>2D-triangle</title>
-    <meta charset="UTF-8" />
-  </head>
+<html lang="en">
+    <head>
+        <title>2D-triangle</title>
+        <meta charset="UTF-8"/>
+    </head>
 
-  <body>
-    <canvas width="600px" height="600px" id="canvas"></canvas>
+    <body>
+      <canvas width="600px" height="600px" id="canvas"></canvas>
 
-    <script src="./index.js"></script>
-  </body>
+      <script src="./index.js"></script>
+    </body>
 </html>
