--- a/ThreeJS/index.html
+++ b/ThreeJS/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <title>ThreeJS</title>
     </head>
+    <style>
+        body {
+            margin: 0;
+        }
+    </style>
     <body>
         <script src="index.js" type="module"></script>
     </body>
